--- a/qonsapp-website/index.html
+++ b/qonsapp-website/index.html
@@ -887,7 +887,7 @@
         <div class="container">
             <h2 class="section-title">About QOnsApp</h2>
             <div class="about-content">
-                <img src="images/founderimage.jpeg" alt="Ernest Nana Dompreh-Owusu" class="founder-photo">
+                <img src="images/founderimage.jpg" alt="Ernest Nana Dompreh-Owusu" class="founder-photo">
                 <p>QOnsApp was built to solve the operational chaos that prevents concierge and property management companies from scaling.</p>
                 <p>Our AI-powered platform automates scheduling, optimizes workforce management, and delivers measurable ROI—letting great service companies focus on what they do best: exceptional service.</p>
                 <p>From managing 5 properties to 50+, QOnsApp scales with your business, providing the tools and insights you need to grow profitably.</p>
