--- a/qonsapp-website/index.html
+++ b/qonsapp-website/index.html
@@ -445,6 +445,7 @@
             height: 200px;
             border-radius: 50%;
             object-fit: cover;
+            object-position: center 20%;
             box-shadow: 0 10px 30px rgba(0,0,0,0.15);
             margin-bottom: 30px;
         }
@@ -988,7 +989,7 @@
                 <h4>Connect</h4>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/ernest-nana-dompreh-owusu-1060b515a" target="_blank">LinkedIn</a></li>
-                    <li><a href="mailto:contact@qonsapp.com">Email Us</a></li>
+                    <li><a href="mailto:hello@qonsapp.com">Email Us</a></li>
                 </ul>
             </div>
         </div>
