--- a/qonsapp-website/index.html
+++ b/qonsapp-website/index.html
@@ -150,13 +150,17 @@
         .hero .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 80px 20px;
+            padding: 60px 20px 80px;
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 60px;
-            align-items: center;
+            align-items: start;
             position: relative;
             z-index: 1;
+        }
+        
+        .hero-content {
+            padding-top: 40px;
         }
         
         .hero-content h1 {
