--- a/qonsapp-website/index.html
+++ b/qonsapp-website/index.html
@@ -1204,7 +1204,7 @@
                     <img src="images/payrollintegration.jpeg" alt="Payroll Integration" class="feature-screenshot">
                     <div class="feature-content">
                         <h3>Seamless Payroll Integration</h3>
-                        <p>Direct integration with major payroll systems including ADP, Paychex, and QuickBooks. Export timesheet data, process payroll, and download detailed reports with one click—eliminating manual data entry and reducing payroll processing time by 80%.</p>
+                        <p>Direct integration with major payroll systems including ADP, Paychex, and QuickBooks. Export timesheet data, process payroll, and download detailed reports with one click, eliminating manual data entry and reducing payroll processing time by 80%.</p>
                     </div>
                 </div>
             </div>
@@ -1309,7 +1309,7 @@
             <div class="about-content">
                 <img src="images/founderimage.jpg" alt="Ernest Nana Dompreh-Owusu" class="founder-photo">
                 <p>QOnsApp was built to solve the operational chaos that prevents concierge and property management companies from scaling.</p>
-                <p>Our AI powered platform automates scheduling, optimizes workforce management, and delivers measurable ROI—letting great service companies focus on what they do best: exceptional service.</p>
+                <p>Our AI powered platform automates scheduling, optimizes workforce management, and delivers measurable ROI, letting great service companies focus on what they do best: exceptional service.</p>
                 <p>From managing 5 properties to 50+, QOnsApp scales with your business, providing the tools and insights you need to grow profitably.</p>
             </div>
         </div>
