--- a/qonsapp-website/index.html
+++ b/qonsapp-website/index.html
@@ -1159,7 +1159,7 @@
             <h2 class="section-title">Powerful Features Built for Scale</h2>
             <div class="features-grid">
                 <div class="feature-item">
-                    <img src="images/Liveshiftmanagement.jpeg" alt="Smart Shift Management" class="feature-screenshot">
+                    <img src="images/shiftmanagement.jpeg" alt="Smart Shift Management" class="feature-screenshot">
                     <div class="feature-content">
                         <h3>Smart Shift Management</h3>
                         <p>Drag and drop calendar with AI suggestions, conflict detection, and automatic notifications. Create templates for recurring shifts and bulk schedule entire months.</p>
